<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:title="@string/menu_save"
        app:showAsAction="ifRoom" />
    <!--android:icon="@drawable/ic_share"-->
    <item
        android:id="@+id/action_discard"
        android:title="@string/menu_discard"
        app:showAsAction="ifRoom"/>
    <!--android:icon="@drawable/ic_share"-->
    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom"/>
    <!--android:icon="@drawable/ic_share"-->
</menu>