<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.krisbiketeam.smarthomeraspbpi3.viewmodels.HomeSettingsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.krisbiketeam.smarthomeraspbpi3.ui.HomeActivity">

        <!-- Wifi progress -->
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            app:stateBasedVisibility="@{viewModel.nearByState}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:stateBasedVisibility="@{viewModel.nearByState}" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/home_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/home_name"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewModel.homeName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/remote_login_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_login_remote_device_login_checkbox_text"
                android:checked="@={viewModel.remoteHomeSetup}"/>

            <Button
                android:id="@+id/login_connect_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/save_home_name"
                android:textStyle="bold" />

        </LinearLayout>
    </FrameLayout>

</layout>